# traffic_simulation

./: .gitignore  README.md
code/: CMakeLists.txt
code/include/: car.h  common.h  hack.h  obstacle.h  road.h  settings.h  simulation.h  transform.h
code/measurements/: common.py  deceleration_delta_acceleration.npy  density.npy  flux.npy  flux.py  flux_density_gamma.py  flux_density_v.py  fourier_data.npz  fourier_space.py  fourier_space1d.py  gammas.npy  gammas_10km.npy  order_parameter.py  order_parameter_delta_acceleration.py  order_parameter_sweep.py  phase_diagram.npz  phase_diagram.py  phase_diagram_10km.npz  pretty_velocity_field.py  sims.npy  variances.npy  variances_10km.npy  variances_delta_acceleration.npy
code/output/: animate.py  animate_new.py  plot.py  readme.md
code/settings/: flux.txt  free_road.txt  obstacle_generates_queues.txt  phasediagram.txt  roundabout.txt  settings1.txt  weird_waves_no_obstacle.txt  working_traffic_light.txt
code/src/: car.cpp  main.cpp  road.cpp  settings.cpp  simulation.cpp  testcase.py
doc/: .gitignore  progress_report.md
doc/latex/: appendix.tex  conclusion.tex  cover.tex  discussion.tex  header.tex  implementation.tex  introduction.tex  model.tex  reference.bib  report.tex  results.tex
flashtalk/: README.md  flashtalk.pptx
presentation/: presentation.pptx
references/: readme.md
